# yolov9_inference

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  requirements.txt
src/: main.cpp
src/ia/: inference.cpp  inference.h
